--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<title>Newflix</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="নেটফ্লিক্সের সকল মুভি এখন দেখুন এখন ফ্রিতে। 😁" />
+    <meta property="og:title" content="নেট-ফ্লিক্সের সকল মু-ভি এখন দেখুন এখন ফ্রিতে। 😁" />
     <meta property="og:image" content="https://i.ibb.co/Cnntj34/Que-se-estrena-en-Netflix-en-abril-2024.jpg"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <meta property="og:description" content="নেটফ্লিক্সের সকল মুভি এখন দেখুন এখন ফ্রিতে। 😁" />
+    <meta property="og:description" content="নেট-ফ্লিক্সের সকল মু-ভি এখন দেখুন এখন ফ্রিতে। 😁" />
 	<link rel="shortcut icon" href="https://i.ibb.co/3YB3J6v/newnetflixicon-800x534.jpg" />
 	<meta name="robots" content="noindex, nofollow">
     <head>
