--- a/adult.html
+++ b/adult.html
@@ -26,7 +26,7 @@
                 <br>
                 	<br>
                 <div class="footer">
-       Developed by <a href="https://sujon0xpi.github.io/card/" target="_blank">Sujon Islam</a>
+       Developed by <a href="https://sujon0xpi.github.io/" target="_blank">Sujon Islam</a>
    | Join our <a href="https://t.me/Freedom369_4u" target="_blank">Telegram</a>
     </div>
             </div>
